--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,13 @@
         "commonjs": true,
         "es2021": true,
         "node": true,
-        "jest": true
+        "jest": true,
     },
     "extends": "eslint:recommended",
     "parserOptions": {
         "ecmaVersion": "latest"
     },
     "rules": {
+        "semi": 0
     }
 }
